--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">
    <title>MQTT Broker For Getting Data</title>
    <link rel="stylesheet" href="style.css">
+   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
    <script src="mqttws31.js" type="text/javascript"></script>
    <script src="mqtt-structure.js" type="text/javascript"></script>
 </head>
