--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="style.css">
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
    <script src="/mqttws31.js" type="text/javascript"></script>
-   <script src="mqtt-structure.js" type="text/javascript"></script>
+   <script src="/mqtt-structure.js" type="text/javascript"></script>
 </head>
 <body>
    <div class="bg"></div>
