--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    <title>MQTT Broker For Getting Data</title>
    <link rel="stylesheet" href="style.css">
    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"></script>
-   <script src="/mqtt-structure.js" type="text/javascript"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" type="text/javascript"></script>
+   <script src="mqtt-structure.js" type="text/javascript"></script>
 </head>
 <body>
    <div class="bg"></div>
